[package]
name = "mist"
version = "1.16.1"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"
description = "minimal, improved speedrun timer"
readme = "README.md"
repository = "https://github.com/LtPeriwinkle/mist"
license = "MIT OR Apache-2.0"

[workspace]
members = ["crates/mist-core/", "crates/mist-split-tool/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bg", "icon", "instant"]
instant = ["mist-core/instant"]
bg = ["sdl2/gfx", "sdl2/image", "mist-core/bg"]
icon = ["sdl2/image"]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "unsafe_textures"]

[dependencies.mist-core]
path = "crates/mist-core/"

[dependencies.lazy_static]
version = "1.4"
