[package]
name = "mist-core"
version = "0.6.0"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"
description = "core functionality of mist"
readme = "README.md"
repository = "https://github.com/LtPeriwinkle/mist"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["timing", "dialogs", "config"]
lss = ["quick-xml"]
timing = []
dialogs = ["tinyfiledialogs"]
config = []
bg = ["config"]

[dependencies.ron]
version = "0.6"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["serde_derive"]

[dependencies.quick-xml]
version = "0.22"
optional = true

[dependencies.tinyfiledialogs]
version = "3.8"
optional = true
