[package]
name = "mist-run-utils"
version = "0.5.0"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"
description = "mist speedrun timer utilities"
readme = "README.md"
repository = "https://github.com/LtPeriwinkle/mist"
license = "MIT OR Apache-2.0"

[features]
default = []
lss = ["quick-xml"]
msf = ["ron", "serde"]

[dependencies.ron]
version = "0.6"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["serde_derive"]
optional = true

[dependencies.quick-xml]
version = "0.20"
optional = true
