[package]
name = "mist-split-tool"
version = "0.2.2"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"
repository = "https://github.com/LtPeriwinkle/mist"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fltk]
version = "0.15"

[dependencies.tinyfiledialogs]
version = "3.3"

[dependencies.mist-run-utils]
path = "../mist-run-utils/"
version = "2.1"
default-features = false
features = ["msf", "lss"]

[dependencies.lazy_static]
version = "1.4"
