[package]
name = "mist-split-tool"
version = "0.4.0"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"
repository = "https://github.com/LtPeriwinkle/mist"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fltk]
version = "1.1"

[dependencies.tinyfiledialogs]
version = "3.8"

[dependencies.mist-core]
version = "0.10"
default-features = false
features = ["lss"]
path = "../mist-core/"

[dependencies.lazy_static]
version = "1.4"

[dependencies.regex]
version = "1.5"
